# kinect-test

./: README.md  kinectdevice.cpp  kinectdevice.h
src/: Application.cpp  Application.h  CMakeLists.txt  KinectDevice.cpp  KinectDevice.h  Kinect_1.pro  PCLDetector.cpp  PCLDetector.h  kinectdevice.cpp  kinectdevice.h  main.cpp
